# server-sic

./: .gitignore  readme.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  building_graph.json  readme.md  rustfmt.toml
backend/docs/: core_logic.md  payload_spec.md
backend/src/: handlers.rs  helper.rs  lib.rs  main.rs  mqtt.rs  mqtt_route.rs  state.rs
backend/src/common/: fire_detection.rs  graph.rs  mod.rs  path_finding.rs
backend/src/configs/: env.rs
backend/src/constants/: mod.rs
backend/src/controllers/: api.rs  readme.md
backend/src/database/: mod.rs  pg.rs  pool.rs  schema.rs
backend/src/state/: app_state.rs
backend/tests/: api_tests.rs  common_tests.rs  deadlock_test.rs  fire_routing_test.rs  routing_fire_test.rs
docs/: architecture.md  building_graph.md  decisions.md  mqtt_topics.md  node_lifecycle.md  protocol.md  provisioning.md  route_payload.md  simulator.md
frontend/: graph_ui.html  test.js
scripts/: give.py  main.py
simulator/: building.json  config.py  danger_score.py  graph.py  hazard_map.py  models.py  mqtt_client.py  node.py  routing.py  simulator.py  test_graph.py  test_hazard.py  test_hazard_routing.py  test_routing.py
simulator/scenarios/: fire_n303.json
