[package]
name = "esp32"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-ws = "0.4.0"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
dashmap = "6.1.0"
dotenvy = "0.15.7"
env_logger = "0.11.9"
futures-util = "0.3.32"
log = "0.4.29"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.50.0", features = ["full"] }
